--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <!-- header -->
 
-      <nav class="header">
+      <nav id="header">
         <div class="container">
           <div class="row">
 
@@ -31,7 +31,7 @@
               </div>
 
               <div class="user-actions d-flex flex-row">
-                <a href="cart.html" class="text-decoration-none">Cart</a>
+                <a href="cart.html" class="">Cart</a>
                 <div class="user-into" id="user-intro">Hi User</div>
                 <div class="logout-btn" id="logout-btn">Logout</div>
               </div>
