--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="./css/home.css"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,10 +46,17 @@
       <div class="container">
         <div class="row">
           <h2 class="home-title text-center">Welcome to Home</h2>
-          <div class="cateogry-list d-flex flex-row justify-content-center align-items-center" id="cateogryList">
+          <div class="cateogry-list d-flex flex-row justify-content-between align-items-center" id="cateogryList">
             <!-- Add cateogry childs -->
+
+            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">All Products</a></div>
+            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Electronics</a></div>
+            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Kitchen Ware</a></div>
+            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Sports</a></div>
+            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Women Outfits</a></div>
+            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Gaming</a></div>
           </div>
-          <div class="cateogrytitle text-center">
+          <div class="cateogry-title text-center">
             Select a cateogry to start shopping
           </div>
 
