--- a/productDetails.html
+++ b/productDetails.html
@@ -56,7 +56,7 @@
                   </div>
                 </div>
               </div>
-              <div class="product-actions btn btn-primary text-decoration-none">
+              <div class="product-details-action btn btn-primary text-decoration-none">
                 Add to Cart
               </div>
               <a
@@ -65,7 +65,6 @@
                 class="product-details-action btn btn-warning text-decoration-none"
                 >Go to Cart</a
               >
-            </div>
           </div>
         </div>
       </div>
