productList page changes

--- a/productList.html
+++ b/productList.html
@@ -80,13 +80,79 @@
 
              <div class="product-list-box" id="productList">
               <!-- List of Products -->
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none inline-block">
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
                 <div class="product-img">
                   <img src="img/product.jpg" alt="" srcset="">
                 </div>
                 <div class="product-name text-center">Some Product</div>
-                <div class="product-price-text-center">$1000</div>
+                <div class="product-price text-center">$1000</div>
                </a>
+
+
+               <!-- Everything below is pure copy pasting --><a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
+                <div class="product-img">
+                  <img src="img/product.jpg" alt="" srcset="">
+                </div>
+                <div class="product-name text-center">Some Product</div>
+                <div class="product-price text-center">$1000</div>
+               </a>
+
              </div>
           </div>
       </div>
