--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
           <h2 class="home-title text-center">Welcome to Home</h2>
           <div class="cateogry-list d-flex flex-row justify-content-between align-items-center" id="cateogryList">
-            <!-- Add cateogry childs -->
+            <!-- Add category children -->
 
             <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">All Products</a></div>
             <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Electronics</a></div>
@@ -57,7 +57,7 @@
             <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Gaming</a></div>
           </div>
           <div class="cateogry-title text-center">
-            Select a cateogry to start shopping
+            Select a category to start shopping
           </div>
 
         </div>
