--- a/cart.html
+++ b/cart.html
@@ -101,7 +101,7 @@
                 <div class="order-details-product-img d-flex">
                   <img src="img/product.jpg" alt"">
                 </div>
-                <div class="order-details-product-data d-flex flex-column">
+                <div class="order-details-product-data d-flex flex-column justify-content-center">
                   <div>Some Product</div>
                   <div>$1000</div>
                 </div>
