--- a/cart.html
+++ b/cart.html
@@ -150,6 +150,60 @@
                   </div>
                 </div>
               </div>
+              <hr>
+              <div class="order-details-product d-flex flex-row">
+                <div class="order-details-product-img d-flex">
+                  <img src="img/product.jpg" alt"">
+                </div>
+                <div class="order-details-product-data d-flex flex-column justify-content-center">
+                  <div>Some Product</div>
+                  <div>$1000</div>
+                </div>
+                <div class="order-details-product-action d-flex flex-column">
+                  <div class="order-details-product-quantity">
+                    <div class="fw-bold">Quantity</div>
+                    <div class="form-group">
+                      <select name="" id="" class="form-select">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="order-details-product-remove btn btn-danger">
+                    Remove
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="order-details-product d-flex flex-row">
+                <div class="order-details-product-img d-flex">
+                  <img src="img/product.jpg" alt"">
+                </div>
+                <div class="order-details-product-data d-flex flex-column justify-content-center">
+                  <div>Some Product</div>
+                  <div>$1000</div>
+                </div>
+                <div class="order-details-product-action d-flex flex-column">
+                  <div class="order-details-product-quantity">
+                    <div class="fw-bold">Quantity</div>
+                    <div class="form-group">
+                      <select name="" id="" class="form-select">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="order-details-product-remove btn btn-danger">
+                    Remove
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="price-details d-flex flex-column" id="priceDetails">
               <div class="price-details-box">
