downloading and populating productList

--- a/productList.html
+++ b/productList.html
@@ -88,71 +88,6 @@
                 <div class="product-price text-center">$1000</div>
                </a>
 
-
-               <!-- Everything below is pure copy pasting --><a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-
              </div>
           </div>
       </div>
@@ -168,5 +103,8 @@
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
       crossorigin="anonymous"
     ></script>
+    <script src="js/productList.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
   </body>
 </html>
