--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
           <div class="cateogry-list d-flex flex-row justify-content-between align-items-center" id="cateogryList">
             <!-- Add category children -->
 
-            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">All Products</a></div>
+            <!-- <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">All Products</a></div>
             <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Electronics</a></div>
             <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Kitchen Ware</a></div>
             <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Sports</a></div>
             <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Women Outfits</a></div>
-            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Gaming</a></div>
+            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Gaming</a></div> -->
           </div>
           <div class="cateogry-title text-center">
             Select a category to start shopping
@@ -77,5 +77,8 @@
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/index.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
   </body>
 </html>
