--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
           <div class="cateogry-list d-flex flex-row justify-content-between align-items-center" id="cateogryList">
             <!-- Add category children -->
 
-            <!-- <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">All Products</a></div>
-            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Electronics</a></div>
-            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Kitchen Ware</a></div>
-            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Sports</a></div>
-            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Women Outfits</a></div>
-            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="">Gaming</a></div> -->
+            <div class="cateogry-item d-flex align-items-center justify-content-center"><a href="productList.html">All Products</a></div>
           </div>
           <div class="cateogry-title text-center">
             Select a category to start shopping
