--- a/productList.html
+++ b/productList.html
@@ -40,12 +40,7 @@
                 <input type="text" placeholder="Search by name" class="form-control" id="searchInput">
               </div>
               <div class="sidebar-search fw-bold">Categories</div>
-              <div id="categoryList">
-                <a href="#" class="d-flex text-decoration-none">Electronics</a>
-                <a href="#" class="d-flex text-decoration-none">Kitchen Ware</a>
-                <a href="#" class="d-flex text-decoration-none">Women Outfits</a>
-                <a href="#" class="d-flex text-decoration-none">Sports</a>
-                <a href="#" class="d-flex text-decoration-none">Gaming</a>
+              <div id="categoryList"></div>
               </div>
               <div class="sidebar-title">Filter by Price</div>
               <div class="price-filter">
@@ -53,20 +48,20 @@
                   <div class="form-group">
                     <select name="minPrice" id="minPrice" class="form-select">
                       <option value="0">0</option>
-                      <option value="10000">10000</option>
-                      <option value="20000">20000</option>
-                      <option value="30000">30000</option>
-                      <option value="40000">40000</option>
+                      <option value="10">10</option>
+                      <option value="20">20</option>
+                      <option value="50">50</option>
+                      <option value="100">100</option>
                     </select>
                   </div>
                   <div class="form-group">
                     <select name="maxPrice" id="maxPrice" class="form-select">
                       <option value="0">0</option>
-                      <option value="10000">10000</option>
-                      <option value="20000">20000</option>
-                      <option value="30000">30000</option>
-                      <option value="40000">40000</option>
-                      <option value="100000">100000</option>
+                      <option value="10">10</option>
+                      <option value="20">20</option>
+                      <option value="50">50</option>
+                      <option value="100">100</option>
+                      <option value="1000">1000</option>
                     </select>
                   </div>
                   </div>
@@ -74,6 +69,8 @@
                     <div id="price-filter-min">Min Price</div>
                     <div class="price-filter-max">Max Price</div>
                 </div>
+
+                <div class="btn btn-warning clear-filter" id="search">Search</div>
                 <div class="btn btn-danger clear-filter" id="clear">Clear Filters</div>
               </div>
              </div>
