--- a/productList.html
+++ b/productList.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login / Signup</title>
+    <title>Product List - Shop Cart</title>
 
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="./css/productList.css" />
@@ -13,8 +13,34 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <style>
+      /* Simple custom loader styles */
+      #customLoader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.7);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+      }
+      #customLoader .spinner-border {
+        width: 3rem;
+        height: 3rem;
+      }
+    </style>
   </head>
   <body>
+    <!-- Simple Custom Loader -->
+    <div id="customLoader">
+      <div class="spinner-border text-light" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+
     <div id="login">
       <nav id="header">
         <div class="container">
@@ -41,8 +67,8 @@
               </div>
               <div class="sidebar-search fw-bold">Categories</div>
               <div id="categoryList"></div>
-              </div>
-              <div class="sidebar-title">Filter by Price</div>
+              <!-- Price Filter moved under category list -->
+              <div class="sidebar-title mt-4">Filter by Price</div>
               <div class="price-filter">
                 <div class="price-filter-select d-flex flex-row justify-contnt-between">
                   <div class="form-group">
@@ -64,29 +90,21 @@
                       <option value="1000">1000</option>
                     </select>
                   </div>
-                  </div>
-                  <div class="price-filter-title d-flex flex-row justify-content-start">
-                    <div id="price-filter-min">Min Price</div>
-                    <div class="price-filter-max">Max Price</div>
                 </div>
-
+                <div class="price-filter-title d-flex flex-row justify-content-start">
+                  <div id="price-filter-min">Min Price</div>
+                  <div class="price-filter-max">Max Price</div>
+                </div>
                 <div class="btn btn-warning clear-filter" id="search">Search</div>
                 <div class="btn btn-danger clear-filter" id="clear">Clear Filters</div>
               </div>
-             </div>
+            </div>
 
              <div class="product-list-box" id="productList">
-              <!-- List of Products -->
-               <a  href="productDetails.html" target="_blank" class="product-item text-decoration-none d-inline-block">
-                <div class="product-img">
-                  <img src="img/product.jpg" alt="" srcset="">
-                </div>
-                <div class="product-name text-center">Some Product</div>
-                <div class="product-price text-center">$1000</div>
-               </a>
-
+              <!-- List of Products will be loaded here -->
              </div>
           </div>
+        </div>
       </div>
     </div>
 
@@ -100,8 +118,7 @@
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/productList.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
   </body>
 </html>
