--- a/productDetails.html
+++ b/productDetails.html
@@ -34,15 +34,15 @@
             class="product-details-wrapper d-flex flex-row justify-content-between align-items-start"
           >
             <div class="product-img d-flex">
-              <img src="img/product.jpg" alt="" />
+              <img src="img/product.jpg" alt="" id="product-img"/>
             </div>
             <div class="product-details-box d-flex flex-column">
               <div class="product-details">
-                <div class="product-name">Some Product</div>
-                <div class="product-price fw-bold">$100</div>
+                <div class="product-name" id="product-name">Some Product</div>
+                <div class="product-price fw-bold" id="product-price">$100</div>
                 <div class="product-description">
                   <div class="product-descripion-title">Description</div>
-                  <div class="product-description-data">
+                  <div class="product-description-data" id="product-description-data">
                     Product is is simply dummy text of the printing and
                     typesetting industry. Lorem Ipsum has been the industry's
                     standard dummy text ever since the 1500s, when an unknown
@@ -80,5 +80,9 @@
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
       crossorigin="anonymous"
     ></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="js/common.js"></script>
+    <script src="js/productDetail.js"></script>
   </body>
 </html>
