--- a/cart.html
+++ b/cart.html
@@ -43,195 +43,28 @@
           <div class="cart-wrapper d-flex flex-row">
             <div class="order-details d-flex flex-column" id="orderDetails">
               <div class="order-details-title fw-bold">Order Title</div>
-              <div class="order-details-product d-flex flex-row">
-                <div class="order-details-product-img d-flex">
-                  <img src="img/product.jpg" alt"">
-                </div>
-                <div class="order-details-product-data d-flex flex-column justify-content-center">
-                  <div>Some Product</div>
-                  <div>$1000</div>
-                </div>
-                <div class="order-details-product-action d-flex flex-column">
-                  <div class="order-details-product-quantity">
-                    <div class="fw-bold">Quantity</div>
-                    <div class="form-group">
-                      <select name="" id="" class="form-select">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="order-details-product-remove btn btn-danger">
-                    Remove
-                  </div>
-                </div>
-              </div>
-              <hr>
-              <div class="order-details-product d-flex flex-row">
-                <div class="order-details-product-img d-flex">
-                  <img src="img/product.jpg" alt"">
-                </div>
-                <div class="order-details-product-data d-flex flex-column justify-content-center">
-                  <div>Some Product</div>
-                  <div>$1000</div>
-                </div>
-                <div class="order-details-product-action d-flex flex-column">
-                  <div class="order-details-product-quantity">
-                    <div class="fw-bold">Quantity</div>
-                    <div class="form-group">
-                      <select name="" id="" class="form-select">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="order-details-product-remove btn btn-danger">
-                    Remove
-                  </div>
-                </div>
-              </div>
-              <hr>
-              <div class="order-details-product d-flex flex-row">
-                <div class="order-details-product-img d-flex">
-                  <img src="img/product.jpg" alt"">
-                </div>
-                <div class="order-details-product-data d-flex flex-column justify-content-center">
-                  <div>Some Product</div>
-                  <div>$1000</div>
-                </div>
-                <div class="order-details-product-action d-flex flex-column">
-                  <div class="order-details-product-quantity">
-                    <div class="fw-bold">Quantity</div>
-                    <div class="form-group">
-                      <select name="" id="" class="form-select">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="order-details-product-remove btn btn-danger">
-                    Remove
-                  </div>
-                </div>
-              </div>
-              <hr>
-              <div class="order-details-product d-flex flex-row">
-                <div class="order-details-product-img d-flex">
-                  <img src="img/product.jpg" alt"">
-                </div>
-                <div class="order-details-product-data d-flex flex-column justify-content-center">
-                  <div>Some Product</div>
-                  <div>$1000</div>
-                </div>
-                <div class="order-details-product-action d-flex flex-column">
-                  <div class="order-details-product-quantity">
-                    <div class="fw-bold">Quantity</div>
-                    <div class="form-group">
-                      <select name="" id="" class="form-select">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="order-details-product-remove btn btn-danger">
-                    Remove
-                  </div>
-                </div>
-              </div>
-              <hr>
-              <div class="order-details-product d-flex flex-row">
-                <div class="order-details-product-img d-flex">
-                  <img src="img/product.jpg" alt"">
-                </div>
-                <div class="order-details-product-data d-flex flex-column justify-content-center">
-                  <div>Some Product</div>
-                  <div>$1000</div>
-                </div>
-                <div class="order-details-product-action d-flex flex-column">
-                  <div class="order-details-product-quantity">
-                    <div class="fw-bold">Quantity</div>
-                    <div class="form-group">
-                      <select name="" id="" class="form-select">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="order-details-product-remove btn btn-danger">
-                    Remove
-                  </div>
-                </div>
-              </div>
-              <hr>
-              <div class="order-details-product d-flex flex-row">
-                <div class="order-details-product-img d-flex">
-                  <img src="img/product.jpg" alt"">
-                </div>
-                <div class="order-details-product-data d-flex flex-column justify-content-center">
-                  <div>Some Product</div>
-                  <div>$1000</div>
-                </div>
-                <div class="order-details-product-action d-flex flex-column">
-                  <div class="order-details-product-quantity">
-                    <div class="fw-bold">Quantity</div>
-                    <div class="form-group">
-                      <select name="" id="" class="form-select">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="order-details-product-remove btn btn-danger">
-                    Remove
-                  </div>
-                </div>
-              </div>
+              <!-- Cart items will be rendered here -->
+              <div id="order-details-products-wrapper"></div>
             </div>
             <div class="price-details d-flex flex-column" id="priceDetails">
               <div class="price-details-box">
                 <div class="price-details-title fw-bold">Price Details</div>
                 <div class="price-details-data">
-                  <div
-                    class="price-details-items d-flex flex-row justify-content-between"
-                  >
+                  <div class="price-details-items d-flex flex-row justify-content-between">
                     <div>Price</div>
-                    <div>$1000</div>
+                    <div id="total-price">$0</div>
                   </div>
-                  <div
-                    class="price-details-items d-flex flex-row justify-content-between"
-                  >
+                  <div class="price-details-items d-flex flex-row justify-content-between">
                     <div>Discount</div>
                     <div>$10</div>
                   </div>
-                  <div
-                    class="price-details-items d-flex flex-row justify-content-between"
-                  >
+                  <div class="price-details-items d-flex flex-row justify-content-between">
                     <div>Delivery Charges</div>
                     <div>Free</div>
                   </div>
-                  <div
-                    class="price-details-items d-flex flex-row justify-content-between"
-                  >
+                  <div class="price-details-items d-flex flex-row justify-content-between">
                     <div>Total</div>
-                    <div>$9999</div>
+                    <div id="net-price">$0</div>
                   </div>
                 </div>
               </div>
@@ -264,5 +97,9 @@
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
       crossorigin="anonymous"
     ></script>
+
+        <script src="js/common.js"></script>
+    <script src="./js/cart.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
