--- a/productDetails.html
+++ b/productDetails.html
@@ -15,6 +15,11 @@
     />
   </head>
   <body>
+    <div id="customLoader" style="display:none;position:fixed;z-index:2000;top:0;left:0;width:100vw;height:100vh;background:rgba(255,255,255,0.7);align-items:center;justify-content:center;">
+      <div class="spinner-border text-primary" style="width:3rem;height:3rem;" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
     <div id="login">
       <nav id="header">
         <div class="container">
