--- a/productList.html
+++ b/productList.html
@@ -119,6 +119,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/productList.js"></script>
   </body>
 </html>
